Add PROTOBUF_INCLUDE_DIR as an include directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/Include )
 ########################
 
 find_package( Protobuf )
+include_directories( ${PROTOBUF_INCLUDE_DIR} )
 protobuf_generate_cpp( Monarch_Protobuf_Source Monarch_Protobuf_Header ${CMAKE_CURRENT_SOURCE_DIR}/Protobuf/MonarchHeader.proto )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 pbuilder_add_ext_libraries( ${PROTOBUF_LIBRARIES} )
