Changed the variable used to refer to the top Monarch directory to allow it to be built as a submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project( Monarch )
 include( ${PROJECT_SOURCE_DIR}/PackageBuilder.cmake )
 pbuilder_prepare_project( 2 2 0 )
 
-include_directories( ${CMAKE_SOURCE_DIR}/Include )
+include_directories( ${PROJECT_SOURCE_DIR}/Include )
 
 
 ########################
