--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,24 +24,23 @@ if( GIT_FOUND )
     execute_process( COMMAND ${GIT_EXECUTABLE} describe --tags --long  OUTPUT_VARIABLE Monarch_GIT_DESCRIBE  OUTPUT_STRIP_TRAILING_WHITESPACE )
 endif( GIT_FOUND )
 
-set( PROTO_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/Protobuf/MonarchHeader.proto
-)
 find_package( Protobuf )
 include_directories( ${PROTOBUF_INCLUDE_DIR} )
 pbuilder_add_ext_libraries( ${PROTOBUF_LIBRARIES} )
-protobuf_generate_cpp( Monarch_Protobuf_Source Monarch_Protobuf_Header ${PROTO_FILES} )
-include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
+include_directories( ${CMAKE_CURRENT_BINARY_DIR}/Protobuf )
+add_subdirectory( Protobuf )
 
-add_subdirectory (libthorax)
-pbuilder_add_submodule_libraries (${libthorax_LIBRARIES})
+add_subdirectory( libthorax )
+pbuilder_add_submodule_libraries( ${libthorax_LIBRARIES} )
 # add to the RPATH to be used when installing, but only if it's not a system directory
-list (FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${libthorax_LIBRARY_DIR}" isSystemDir)
-if ("${isSystemDir}" STREQUAL "-1")
-   list (APPEND CMAKE_INSTALL_RPATH ${libthorax_LIBRARY_DIR})
-endif ("${isSystemDir}" STREQUAL "-1")
-include_directories (${PROJECT_SOURCE_DIR}/libthorax/cpp)
-include_directories (${PROJECT_SOURCE_DIR}/libthorax)
+list( FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${libthorax_LIBRARY_DIR}" isSystemDir )
+if ( "${isSystemDir}" STREQUAL "-1" )
+   list( APPEND CMAKE_INSTALL_RPATH ${libthorax_LIBRARY_DIR} )
+endif( "${isSystemDir}" STREQUAL "-1" )
+include_directories(
+    ${PROJECT_SOURCE_DIR}/libthorax/cpp
+    ${PROJECT_SOURCE_DIR}/libthorax
+)
 
 
 ###################
@@ -49,34 +48,33 @@ include_directories (${PROJECT_SOURCE_DIR}/libthorax)
 ###################
 
 set( MONARCHCORE_HEADERFILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Monarch.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchException.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchHeader.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchIO.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchLogger.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchRecord.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchTypes.hpp
-    ${Monarch_Protobuf_Header}
+    Source/Monarch.hpp
+    Source/MonarchException.hpp
+    Source/MonarchHeader.hpp
+    Source/MonarchIO.hpp
+    Source/MonarchLogger.hpp
+    Source/MonarchRecord.hpp
+    Source/MonarchTypes.hpp
 )
 
 set( MONARCHCORE_SOURCEFILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Monarch.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchException.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchHeader.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchIO.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchLogger.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchVersion.cpp
-    ${Monarch_Protobuf_Source}
+    Source/Monarch.cpp
+    Source/MonarchException.cpp
+    Source/MonarchHeader.cpp
+    Source/MonarchIO.cpp
+    Source/MonarchLogger.cpp
+    Source/MonarchVersion.cpp
 )
 
-configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchVersion.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/MonarchVersion.hpp )
+configure_file( Source/MonarchVersion.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/MonarchVersion.hpp )
 set( MONARCHCORE_HEADERFILES
     ${MONARCHCORE_HEADERFILES}
     ${CMAKE_CURRENT_BINARY_DIR}/MonarchVersion.hpp
 )
+include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
 add_library( MonarchCore ${MONARCHCORE_SOURCEFILES} )
-target_link_libraries( MonarchCore ${EXTERNAL_LIBRARIES} )
+target_link_libraries( MonarchCore MonarchProto ${EXTERNAL_LIBRARIES} )
 
 pbuilder_install_headers( ${MONARCHCORE_HEADERFILES} )
 pbuilder_install_libraries( MonarchCore )
@@ -86,14 +84,14 @@ pbuilder_install_libraries( MonarchCore )
 # monarch executables #
 #######################
 
-add_executable( MonarchDump ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchDump.cpp )
-target_link_libraries( MonarchDump MonarchCore ${EXTERNAL_LIBRARIES})
+add_executable( MonarchDump Source/MonarchDump.cpp )
+target_link_libraries( MonarchDump MonarchCore MonarchProto ${EXTERNAL_LIBRARIES})
 
-add_executable( MonarchInfo ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchInfo.cpp )
-target_link_libraries( MonarchInfo MonarchCore ${EXTERNAL_LIBRARIES})
+add_executable( MonarchInfo Source/MonarchInfo.cpp )
+target_link_libraries( MonarchInfo MonarchCore MonarchProto ${EXTERNAL_LIBRARIES})
 
-add_executable( MonarchTimeCheck ${CMAKE_CURRENT_SOURCE_DIR}/Source/MonarchTimeCheck.cpp )
-target_link_libraries( MonarchTimeCheck MonarchCore ${EXTERNAL_LIBRARIES})
+add_executable( MonarchTimeCheck Source/MonarchTimeCheck.cpp )
+target_link_libraries( MonarchTimeCheck MonarchCore MonarchProto ${EXTERNAL_LIBRARIES})
 
 pbuilder_install_executables (
     MonarchDump
