Partial update to Monarch class towards reading/writing the header. Other updates to MHeader.hh and MTypes.hh. Updated the CMakeLists file, though it's still missing HDF5 stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,20 +49,22 @@ include_directories( BEFORE
 
 set( MONARCHCORE_HEADERFILES
     Source/MHeader.hh
+    Source/MLogger.hh
     Source/MMemberVariable.hh
-    #Source/MMonarch.hh
+    Source/MMonarch.hh
     Source/MTypes.hh
 )
 
 set( MONARCHCORE_SOURCEFILES
-    #Source/Monarch.cc
     Source/MHeader.cc
+    Source/MLogger.cc
+    Source/MMonarch.cc
 )
 
-configure_file( Source/MonarchVersion.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/MonarchVersion.hpp )
+configure_file( Source/MVersion.hhp.in ${CMAKE_CURRENT_BINARY_DIR}/MVersion.hh )
 set( MONARCHCORE_HEADERFILES
     ${MONARCHCORE_HEADERFILES}
-    ${CMAKE_CURRENT_BINARY_DIR}/MonarchVersion.hpp
+    ${CMAKE_CURRENT_BINARY_DIR}/MVersion.hh
 )
 include_directories( BEFORE ${CMAKE_CURRENT_BINARY_DIR} )
 
