Added Monarch2 library and executables.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,11 @@ pbuilder_install_executables (
     #MonarchTimeCheck
 )
 
+#############################
+# libraries and executables #
+#############################
+
+add_subdirectory( Monarch2 )
 
 #######################
 # installation config #
