Fixed naming of and bugs in Monarch3ReadTest.

--- a/Monarch3/CMakeLists.txt
+++ b/Monarch3/CMakeLists.txt
@@ -61,6 +61,7 @@ target_link_libraries( Monarch3WriteTest Monarch3 ${EXTERNAL_LIBRARIES})
 pbuilder_install_executables (
     #Monarch3Dump
     Monarch3Info
+    Monarch3ReadTest
     Monarch3WriteTest
     #Monarch3TimeCheck
 )
