--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,6 @@ include( ${PROJECT_SOURCE_DIR}/PackageBuilder.cmake )
 pbuilder_prepare_project( 2 6 7 )
 cmake_policy (SET CMP0011 NEW)
 
-include_directories( BEFORE ${PROJECT_SOURCE_DIR}/Source )
-
 # Egg file version
 set( Egg_VERSION "3.0.0b" )
 
@@ -31,12 +29,14 @@ endif( GIT_FOUND )
 
 if( Monarch_BUILD_MONARCH3 )
     find_package( HDF5 REQUIRED COMPONENTS CXX )
+    include_directories( BEFORE ${PROJECT_SOURCE_DIR}/Monarch3 ${PROJECT_BINARY_DIR} )
     include_directories( BEFORE ${HDF5_INCLUDE_DIR} )
     pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARIES} )
 endif( Monarch_BUILD_MONARCH3 )
 
 if( Monarch_BUILD_MONARCH2 )
     find_package( Protobuf REQUIRED )
+    include_directories( BEFORE ${PROJECT_SOURCE_DIR}/Monarch2 ${PROJECT_BINARY_DIR} )
     include_directories( ${PROTOBUF_INCLUDE_DIR} )
     pbuilder_add_ext_libraries( ${PROTOBUF_LIBRARIES} )
     include_directories( BEFORE ${CMAKE_CURRENT_BINARY_DIR}/Protobuf )
@@ -45,15 +45,13 @@ endif( Monarch_BUILD_MONARCH2 )
 
 add_subdirectory( libthorax )
 pbuilder_add_submodule_libraries( ${libthorax_LIBRARIES} )
+include_directories( ${libthorax_DEP_INCLUDE_DIRS} )
+message(STATUS "from monarch, libthorax dep include dirs: ${libthorax_DEP_INCLUDE_DIRS}")
 # add to the RPATH to be used when installing, but only if it's not a system directory
 list( FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${libthorax_LIBRARY_DIR}" isSystemDir )
 if ( "${isSystemDir}" STREQUAL "-1" )
    list( APPEND CMAKE_INSTALL_RPATH ${libthorax_LIBRARY_DIR} )
 endif( "${isSystemDir}" STREQUAL "-1" )
-include_directories( BEFORE 
-    ${PROJECT_SOURCE_DIR}/libthorax/cpp
-    ${PROJECT_SOURCE_DIR}/libthorax
-)
 
 
 #############################
